--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,8 +6,8 @@ sonar.projectVersion=1.0
 # Comma-separated paths to directories with sources (required)
 sonar.sources=src
 
-sonar.login=admin
-sonar.password=admin1234
+# sonar.login=admin
+# sonar.password=adminnew
 
 #sonar.profile=NokiaProfile
 # Language
